<resources>
    <string name="app_name">where</string>
    <string name="edit_message">Enter a message</string>
    <string name="edit_mes">EnterAMessage</string>
    <string name="button_send">Send</string>
    <string name="to">to</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="l1">我是左1</string>
    <string name="med">我在中间</string>
    <string name="r1">我在右边</string>
    <string name="currentposition">当前位置</string>
    <string name="myposition">我的位置</string>
    <string name="learningcontent">学习内容</string>
    <string name="operatedata">操作数据库</string>
    <string name="myblog">我的博客</string>
    <string name="appupdate">应用升级</string>
    <string name="mygithub">我的github</string>
    <string name="intromyself">个人介绍</string>
    <string name="xiuren">秀人网</string>
    <string name="change_layout">更换布局</string>
    <string name="origin_my_first_app">第一代</string>
    <!--这是一个字符串资源文件，您可在此文件中指定所有界面字符串。该文件可让您在一个位置管理所有界面字符串，使字符串的查找，更新和本地化变得更加容易 -->
    <!--Edit translations for all locales in the translaitns eiditon 右边出现Open editior-->
    <string name="app_id">56f4cd01</string>
    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="pref_title_iat_dwa">结果动态修正</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash">超级钱包BOSS版</string>
    <string name="title_activity_login_forget_password">LoginForgetPasswordActivity</string>
    <string name="title_activity_lead">LeadActivity</string>
    <string name="title_activity_consume">ConsumeActivity</string>
    <string name="title_activity_sett_level">SettLevelActivity</string>
    <string name="title_activity_member_card_add">MemberCardAddActivity</string>
    <string name="title_activity_member_settings">MemberSettingsActivity</string>
    <string name="title_activity_member_card">MemberCardActivity</string>
    <string name="title_activity_von_view_group">VonViewGroupActivity</string>
    <string name="title_activity_uimain">UIMainActivity</string>
    <string name="title_activity_dialog_main">DialogMainActivity</string>
    <string name="title_activity_dialog_loading_progress_acfun_video">DialogLoadingProgressAcfunVideoActivity</string>
    <string name="title_activity_function_main">FunctionMainActivity</string>
    <string name="title_activity_web_view_main">WebViewMainActivity</string>
    <string name="title_activity_web_view_base">WebViewBaseActivity</string>
    <string name="title_activity_wheel_horizontal">WheelHorizontalActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_card_uimain">CardUIMainActivity</string>
    <string name="title_activity_sliding_drawer_single">SlidingDrawerSingleActivity</string>
    <string name="title_activity_progress_main">ProgressMainActivity</string>
    <string name="title_activity_round_progress_bar">RoundProgressBarActivity</string>
    <string name="title_activity_file_to_bitmap">FileToBitmapActivity</string>
    <string name="title_activity_drag_del_list_view">DragDelListViewActivity</string>
    <string name="title_activity_create_qrcode">CreateQRCodeActivity</string>
    <string name="title_activity_single_progress">SingleProgressActivity</string>
    <string name="title_activity_circle_head">CircleHeadActivity</string>
    <string name="title_activity_multi_card">MultiCardActivity</string>
    <string name="title_activity_speech">SpeechActivity</string>

</resources>
