<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="139dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:foreground="@drawable/common_google_signin_btn_icon_dark" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="268dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startCurrentPoistion"
                    android:text="@string/currentposition" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startMyPosition"
                    android:text="@string/myposition" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startLearnContent"
                    android:text="@string/learningcontent" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="operateData"
                    android:text="@string/operatedata" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startMyBlog"
                    android:text="@string/myblog" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startXiuRen"
                    android:text="@string/mygithub" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startIntroMyself"
                    android:text="@string/intromyself" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startAppUpdate"
                    android:text="@string/appupdate" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startXiuRen"
                    android:text="@string/xiuren" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startXiuRen"
                    android:text="猫" />

                <Button
                    android:id="@+id/button17"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startXiuRen"
                    android:text="知妹社" />
                <Button
                    android:id="@+id/button18"
                    android:layout_width="269dp"
                    android:layout_height="42dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:onClick="startTeach"
                    android:text="自定义List View"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
